# watcherr

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
tests/: test_aiohttp_middleware.py  test_apscheduler_listener.py  test_asgi.py  test_celery_signals.py  test_config.py  test_django_middleware.py  test_dramatiq_middleware.py  test_fastapi_middleware.py  test_flask.py  test_formatter.py  test_huey_signals.py  test_litestar_middleware.py  test_logging_handler.py  test_playwright.py  test_rate_limiter.py  test_rq_handler.py  test_sanic_middleware.py  test_send_photo.py  test_sender.py  test_wsgi.py
watcherr/: __init__.py  config.py  formatter.py  logging_handler.py  rate_limiter.py  sender.py
watcherr/bot/: handlers.py  main.py
watcherr/integrations/: __init__.py  aiohttp_middleware.py  apscheduler_listener.py  asgi.py  celery_signals.py  django_middleware.py  dramatiq_middleware.py  fastapi_middleware.py  flask.py  huey_signals.py  litestar_middleware.py  playwright.py  playwright_pytest.py  rq_handler.py  sanic_middleware.py  wsgi.py
