[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watcherr"
version = "0.1.2"
description = "Lightweight error alerting via Telegram for Python apps. Integrates with FastAPI, Django, and Celery with rate limiting and retry support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["error", "alerting", "telegram", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
django = ["django>=3.2"]
celery = ["celery>=5.0"]
bot = ["aiogram>=3.0"]
all = ["watcherr[fastapi,django,celery,bot]"]
dev = [
    "watcherr[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.scripts]
watcherr = "watcherr.bot.main:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
